# torupati_tips

./: README.md
html_image_update/sample01/: index.html
html_image_update/sample02/: index.html
html_image_update/test03/: index.html  index.js
python_Path/: sample.py  sample2.py
python_args_namespace/: memo.md  test01.py  test02.py  test03.py  test04.py
raspicamera/: MEMO.md
test_lasso/: pyproject.toml  run01.py  run02.py  sample2.py
timestamp/: MEMO.md
timestamp_io/: README.md  run.sh  test01.py  testcode1.c  testcode2.c  timestamp.csv
try_rawpy/: MEMO.md  MEMO1.md  colour_sd_use.py  plot_reflection.py  pyproject.toml  test_load.py
