[tool.poetry]
name = "test-lasso"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_lasso"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
