[tool.poetry]
name = "try-rawpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "try_rawpy"}]

[tool.poetry.dependencies]
#python = "^3.10"
python = ">=3.10,<3.13"
rawpy = "^0.19.1"
matplotlib = "^3.8.4"
colour-science = "^0.4.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
